--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.androiddemo.androiddemo.modulecommunication.ActivityClient">
 
-</android.support.constraint.ConstraintLayout>
+    
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:textColor="#000000"
+        android:textSize="13sp"
+        android:id="@+id/edit"
+        />
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Send"
+        android:textSize="15sp"
+        android:layout_below="@+id/edit"
+        android:layout_marginTop="10dip"
+        />
+</RelativeLayout>
