--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context="com.androiddemo.androiddemo.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        />
 
+    <Button
+        android:id="@+id/btn_memory"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:text="Send Memory"
+        android:textSize="13sp"
+        />
 </RelativeLayout>
